--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,13 +1,20 @@
-.header,
-.header > * {
+.header {
+  position: sticky;
+  top: -8px;
+  z-index: 100;
+}
+
+.header__top,
+.header__top > * {
   display: flex;
   align-items: center;
   flex: 1;
 }
 
-.header {
-  padding: 0 10px;
+.header__top {
+  padding: 0px;
   margin-top: -10px;
+  background-color: #fff;
 }
 
 .headerLeft {
@@ -73,4 +80,9 @@
 
 .headerRight .MuiSvgIcon-root {
   cursor: pointer;
+}
+
+.header__bottom {
+  margin-left: 200px;
+  background-color: #fff;
 }
