--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -73,13 +73,28 @@
   color: #11111199;
   justify-content: space-between;
   width: 100%;
-  max-width: 150px;
+  max-width: 250px;
   margin-left: auto;
   margin-right: 20px;
 }
 
 .headerRight .MuiSvgIcon-root {
   cursor: pointer;
+}
+
+.headerRight > button {
+  width: 60px;
+  margin: 0 10px;
+  background-color: rgb(209, 3, 3);
+  border: none;
+  color: #fff;
+  padding: 5px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.headerRight > button:focus {
+  outline-width: 0;
 }
 
 .header__bottom {
