--- a/src/css/Card.css
+++ b/src/css/Card.css
@@ -2,6 +2,21 @@
   margin: 8px;
 }
 
+.card__top {
+  position: relative;
+}
+
+.card__videoDuration {
+  position: absolute;
+  bottom: 6px;
+  right: 4px;
+  background-color: rgb(0, 0, 0, 0.8);
+  border-radius: 3px;
+  color: #fff;
+  font-size: 13px;
+  padding: 2px 5px;
+}
+
 .card__top img {
   width: 100%;
 }
