--- a/src/css/SearchFilter.css
+++ b/src/css/SearchFilter.css
@@ -18,7 +18,7 @@
   border: 1px solid #cccccc90;
   cursor: pointer;
   margin: 0 5px;
-  width: max-content;
+  white-space: nowrap;
 }
 
 .searchFilter > p:hover {
