--- a/src/css/Watch.css
+++ b/src/css/Watch.css
@@ -5,5 +5,7 @@
   z-index: 100;
   background-color: #fff;
   width: 100%;
-  display: flex;
+  display: grid;
+  grid-template: auto auto auto 1fr / auto 402px;
+  grid-row-gap: 8px;
 }
