Video meta stats - dynamic rating

--- a/src/css/Rating.css
+++ b/src/css/Rating.css
@@ -1,3 +1,25 @@
 .rating {
   display: flex;
+  position: relative;
+  margin-top: 9px;
+}
+
+.rating__top {
+  display: flex;
+  width: 129px;
+  justify-content: space-evenly;
+}
+
+.rating__bottom {
+  width: 128px;
+  height: 3px;
+  position: absolute;
+  bottom: -18px;
+  background-color: #ccc;
+}
+
+.rating__bottom--barTop {
+  background-color: #70707090;
+  height: 3px;
+  position: absolute;
 }
